--- a/index.html
+++ b/index.html
@@ -72,5 +72,7 @@
     <a href="hobbies.html">My hobbies</a>
     <br>
     <a href="contact-address.html">My contact address</a>
+    <br>
+    <a href="https://nandhinipython.github.io/100-days-of-code/">My 100-days-of-code</a>
   </body>
 </html>
